Added much needed test coverage Made sure they run without fail